# neural-network-from-scratch-cpp

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md  SECURITY.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  release.yml  security.yml  static-analysis.yml
benchmarks/: benchmark_network.cpp  benchmark_report.md
docs/: AUDIT.md  PRODUCTION_CHECKLIST.md  architecture.md  benchmarks.md
docs/adr/: 0001-ci-and-deployment-hygiene.md
src/: CMakeLists.txt  main.cpp
src/core/: Activation.hpp  Layer.hpp  Loss.hpp  NeuralNet.hpp
src/impl/: Activations.cpp  Activations.hpp  CSVLoader.cpp  CSVLoader.hpp  DenseLayer.cpp  DenseLayer.hpp  Losses.cpp  Losses.hpp  NeuralNet.cpp
tests/: CMakeLists.txt  test_network.cpp
